# ai-infra-gpu-engineering-ramp

./: .gitattributes  .gitignore  00_study_plan.md  01_pitch_and_demo.md  02_hands_on_labs.md  03_mock_interview_qa.md  04_stack_reference_verified.md  LICENSE  MASTER-PLAN.md  READINESS-REVIEW.md  README.md  _config.yml  claude_code_prompt_cert_plan.md  index.md  nvidia_prep_hub.html  tech-stack.json
.github/workflows/: refresh-readme.yml
_includes/: head-custom.html
assets/: progress.css  progress.js  site.css
companion-lessons/: README.md  week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md  week-09.md  week-10.md  week-11.md  week-12.md
cpp-cuda-track/: README.md
cpp-cuda-track/01-execution-model/: README.md
cpp-cuda-track/02-memory-hierarchy/: README.md
cpp-cuda-track/03-data-parallel-saxpy/: README.md
cpp-cuda-track/04-reduction/: README.md
cpp-cuda-track/05-scan-histogram/: README.md
cpp-cuda-track/06-matmul-tiling/: README.md
cpp-cuda-track/07-async-overlap/: README.md
cpp-cuda-track/08-sync-atomics-memory-model/: README.md
cpp-cuda-track/09-profiling-roofline/: README.md
cpp-cuda-track/10-advanced-gpu/: README.md
cpp-cuda-track/11-multi-device/: README.md
cpp-cuda-track/12-capstone-pytorch-extension/: README.md  lab.py
cpp-cuda-track/common/: bench.hpp  cuda_check.cuh
gpu-engineering-lab/: .gitignore  README.md  ROADMAP.md
gpu-engineering-lab/01-foundations/week-02-cuda-basics/exercises/: Cargo.toml  build.rs
gpu-engineering-lab/01-foundations/week-02-cuda-basics/kernels/: Cargo.toml
gpu-engineering-lab/01-foundations/week-02-cuda-basics/kernels/src/: lib.rs
gpu-engineering-lab/01-foundations/week-03-matmul-optimization/kernels/: Cargo.toml
gpu-engineering-lab/01-foundations/week-03-matmul-optimization/kernels/src/: lib.rs
gpu-engineering-lab/01-foundations/week-03-matmul-optimization/runner/: Cargo.toml  build.rs
gpu-engineering-lab/01-foundations/week-03-matmul-optimization/runner/src/: main.rs
gpu-engineering-lab/01-foundations/week-04-pytorch-custom-ops/: .github-workflow-snippet.yml  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  rust-toolchain.toml
gpu-engineering-lab/01-foundations/week-04-pytorch-custom-ops/bench/: bench_ops.py
gpu-engineering-lab/01-foundations/week-04-pytorch-custom-ops/ext/: Cargo.toml  build.rs
gpu-engineering-lab/01-foundations/week-04-pytorch-custom-ops/ext/src/: lib.rs
gpu-engineering-lab/01-foundations/week-04-pytorch-custom-ops/kernels/: Cargo.toml
gpu-engineering-lab/01-foundations/week-04-pytorch-custom-ops/kernels/src/: lib.rs
gpu-engineering-lab/01-foundations/week-04-pytorch-custom-ops/rusty_kernels/: __init__.py  ops.py
gpu-engineering-lab/01-foundations/week-04-pytorch-custom-ops/tests/: test_ops.py
gpu-engineering-lab/02-llm-engineering/: README.md
gpu-engineering-lab/setup/: cloud-multi-gpu.md  (+2 more)
k8s-ai-stack-demo/: .gitignore  README.md
nvidia-cert-track/: PROGRESS.md  README.md  STUDY-PATH.md
references/: README.md  hf-ultrascale-playbook.md
rust-book-companion/: README.md  appendices.md  ch01_getting_started.md  ch02_guessing_game.md  ch03_common_concepts.md  ch04_ownership.md  ch05_structs.md  ch06_enums_matching.md  ch07_packages_crates_modules.md  ch08_collections.md  ch09_error_handling.md  ch10_generics_traits_lifetimes.md  ch11_testing.md  ch12_io_project_minigrep.md  ch13_iterators_closures.md  ch14_cargo_crates_io.md  ch15_smart_pointers.md  ch16_concurrency.md  ch17_async_await.md  ch18_oop_features.md  ch19_patterns_matching.md  ch20_advanced_features.md  ch21_final_project_web_server.md  further_reading.md  quick_reference.md
scripts/: refresh_readme.py
stats/: traffic-history.json
(+253 files in other folders)
